--- a/submission/Dockerfile
+++ b/submission/Dockerfile
@@ -1,6 +1,9 @@
 # Definition of Submission container
 ARG AIDO_REGISTRY
-FROM ${AIDO_REGISTRY}/duckietown/dt-machine-learning-base-environment:daffy-amd64
+ARG ARCH="amd64"
+ARG MAJOR=daffy
+ARG BASE_TAG=${MAJOR}-${ARCH}
+FROM ${AIDO_REGISTRY}/duckietown/dt-machine-learning-base-environment:${BASE_TAG}
 
 # DO NOT MODIFY: your submission won't run if you do
 RUN apt-get update -y && apt-get install -y --no-install-recommends \
@@ -17,16 +20,14 @@ WORKDIR /workspace
 
 ARG PIP_INDEX_URL
 ENV PIP_INDEX_URL=${PIP_INDEX_URL}
-RUN echo PIP_INDEX_URL=${PIP_INDEX_URL}
 
 # here, we install the requirements, some requirements come by default
 # you can add more if you need to in requirements.txt
-RUN pip3 install -U "pip>=20.2"
 COPY requirements.* ./
 RUN cat requirements.* > .requirements.txt
-RUN  pip3 install --use-feature=2020-resolver -r .requirements.txt
+RUN python3 -m pip install -r .requirements.txt
 
-RUN pip3 uninstall -y dataclasses
+RUN python3 -m pip uninstall -y dataclasses
 
 # let's copy all our solution files to our workspace
 # if you have more file use the COPY command to move them to the workspace
@@ -41,5 +42,4 @@ COPY wrappers.py /workspace
 
 RUN python3 -c "import solution; import wrappers; import model; import helpers;"
 
-# let's see what you've got there...
 CMD python3 solution.py
