Changes to be Committed   * Updated the Dockerfile   * Updated the Base image to challenge-aido_lf-template-pytorch   * added .dtproject   * checked dts devel build --arch arm64v8 and dts devel run --arch arm64v8   * checked the working of dts challenges evaluate

--- a/submission/Dockerfile
+++ b/submission/Dockerfile
@@ -1,9 +1,12 @@
 # Definition of Submission container
 ARG DOCKER_REGISTRY
-ARG ARCH="amd64"
+ARG ARCH="arm64v8"
 ARG MAJOR=daffy
 ARG BASE_TAG=${MAJOR}-${ARCH}
-FROM ${DOCKER_REGISTRY}/duckietown/dt-machine-learning-base-environment:${BASE_TAG}
+#FROM ${DOCKER_REGISTRY}/duckietown/dt-machine-learning-base-environment:${BASE_TAG}
+
+#FROM ${DOCKER_REGISTRY}/duckietown/challenge-aido_lf-baseline-duckietown-ml:${BASE_TAG}
+FROM ${DOCKER_REGISTRY}/duckietown/challenge-aido_lf-template-pytorch:${BASE_TAG}
 
 # DO NOT MODIFY: your submission won't run if you do
 RUN apt-get update -y && apt-get install -y --no-install-recommends \
